# gw2-data-repo

./: .env.example  .gitignore  .linear.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/index/: currency_name_overrides.yaml  currency_names.yaml  gathering_nodes.yaml  item_name_overrides.yaml  item_names.yaml
data/items/: 100048.yaml  100050.yaml  100098.yaml  100153.yaml  100177.yaml  100193.yaml  100198.yaml  100267.yaml  100288.yaml  100311.yaml  100345.yaml  100385.yaml  100390.yaml  100400.yaml  100403.yaml  100466.yaml  100509.yaml  100512.yaml  100524.yaml  100542.yaml  100544.yaml  100547.yaml  100561.yaml  100569.yaml  100579.yaml  100614.yaml  100659.yaml  100706.yaml  100752.yaml  100798.yaml  100852.yaml  100908.yaml  100916.yaml  100924.yaml  100930.yaml  100933.yaml  100942.yaml  100946.yaml  100947.yaml  101101.yaml  (+1983 more)
data/schema/: item.schema.json  location.schema.json  vendor.schema.json
data/vendors/: locations.yaml  vendors.yaml
docs/: data-distribution.md
prompts/: extract_acquisitions.py  extract_gathering_nodes.py
schema/: acquisition.schema.json
scripts/: build_dist.py  build_gathering_index.py  build_index.py  migrate_container_names.py  migrate_guaranteed_choice.py  populate.py  populate_tree.py  populate_vendors.py  validate.py
tests/: test_api.py  test_build_index.py  test_cache.py  test_classify_and_resolve.py  test_config.py  test_llm.py  test_resolver.py  test_schema.py  test_sorter.py  test_terminal.py  test_vendor_scraper.py  test_wiki.py
(+15 files in other folders)
